# Coordinate-Picker

./: Cargo.toml  README.md
.github/workflows/: release.yaml
Screen-Coordinate-Helper/: Cargo.toml
Screen-Coordinate-Helper/src/: app.rs  canvas.rs  coordinate.rs  ui.rs
src/: app.rs  canvas.rs  grid.rs  main.rs  marker.rs
