[package]
name = "coordinate_picker"
version = "0.1.4"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A tool for determining screen coordinates for 2D application development"

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
egui_extras = "0.22.0"
image = { version = "0.24.6", features = ["png", "jpeg"] }
clipboard = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
rfd = "0.11.4"
